[package]
name = "trident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bitpacking = "0.8.4"
bytefmt = "0.1.7"
byteorder = "1.4.3"
clap = { version = "4.0.17", features = ["derive"]}
integer-encoding = "3.0.4"
rand = "0.8.5"
rustc-hash = "1.1.0"
walkdir = "2.3.2"

[dev-dependencies]
quickcheck = "1.0.3"

[profile.release]
debug = true
