[package]
name = "trident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bitpacking = "0.8.4"
bytefmt = "0.1.7"
byteorder = "1.4.3"
clap = { version = "4.0.17", features = ["derive"]}
integer-encoding = "3.0.4"
itertools = "0.10.5"
rand = "0.8.5"
rocksdb = "0.19.0"
rustc-hash = "1.1.0"
walkdir = "2.3.2"
proptest-derive = "0.3.0"
proptest = "1.0.0"
parquet = "26.0.0"
duckdb = "0.5.1"

[dev-dependencies]
insta = "1.21.0"

# Using a fork of quickcheck because the current release does not support arbitrary arrays
# quickcheck = "1.0.3" 

[profile.release]
debug = true
